# solarlog_cli

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  ruff.yml  tests.yml  typing.yml
src/solarlog_cli/: solarlog_client.py  solarlog_connector.py  solarlog_exceptions.py  solarlog_models.py
tests/: __init__.py  conftest.py  syrupy.py  test_solarlog_cli.py
tests/__snapshots__/: test_solarlog_cli.ambr
tests/fixtures/: basic_data.json  basic_data_during_update.json  basic_data_no_power.json  battery_data.json  battery_data_without_battery.json  device_data_1.json  device_data_2.json  device_data_3.json  device_data_4.json  device_list.json  device_list_access_denied.json  energy_per_inverter.json  extended_data.json  power_per_inverter.json  user_salts.json
